<resources>
    <string name="app_name">TraKingApp</string>
    <string name="item_title_text">Title</string>
    <string name="latitude_text">Latitude:</string>
    <string name="longitude_text">Longitude:</string>
    <string name="altitude_text">Altitude:</string>
    <string name="creation_instant_text">Creation Date | Time</string>
    <string name="locations_routes_switch">Location/Routes </string>

    <!-- Descriptions -->
    <string name="main_btn_description">Add…</string>
    <string name="icon_type_description">Location Type</string>
    <string name="add_route_btn_description">Add Route</string>
    <string name="add_location_btn_description">Register Location</string>
    <string name="map_view_content_description">Map View</string>

    <!-- Tab Names -->
    <string name="location_tab">Locations</string>
    <string name="routes_tab">Routes</string>

    <!-- Route Item Labels -->
    <string name="route_title_label">New Route</string>
    <string name="start_time_label">Start Time:</string>
    <string name="stop_time_label">Stop Time:</string>
    <string name="status_label">Status:</string>
    <string name="tracking_status_on">TraKing Location…</string>
    <string name="tracking_status_off">Traking Finished.</string>

    <!-- Table Names -->
    <string name="instantLocation_table">instantLocation_table</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>