<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/itemConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:focusable="true"
    android:paddingTop="6dp"
    android:paddingBottom="6dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.6"
                android:paddingBottom="8dp">

                <TextView
                    android:id="@+id/nameTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:fontFamily="sans-serif-condensed"
                    android:text="@string/route_title_label"
                    android:textSize="24sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.09"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.100000024" />

                <ImageView
                    android:id="@+id/itemTypeIcon"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_marginEnd="12dp"
                    android:contentDescription="@string/icon_type_description"
                    android:src="@drawable/baseline_alt_route_24"
                    app:layout_constraintBottom_toTopOf="@+id/divider"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:tint="@color/cool_gray" />

                <View
                    android:id="@+id/divider"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="12dp"
                    android:background="?android:attr/listDivider"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/nameTextView" />

                <TextView
                    android:id="@+id/startTimeLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:text="@string/start_time_label"
                    app:layout_constraintStart_toStartOf="@+id/nameTextView"
                    app:layout_constraintTop_toBottomOf="@+id/divider" />

                <TextView
                    android:id="@+id/stopTimeLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/stop_time_label"
                    app:layout_constraintStart_toStartOf="@+id/startTimeLabel"
                    app:layout_constraintTop_toBottomOf="@+id/startTimeLabel" />

                <TextView
                    android:id="@+id/isRecordingLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:text="@string/status_label"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/startTimeLabel"
                    app:layout_constraintTop_toBottomOf="@+id/stopTimeLabel" />

                <TextView
                    android:id="@+id/startTimeTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text=""
                    app:layout_constraintStart_toEndOf="@+id/stopTimeLabel"
                    app:layout_constraintTop_toTopOf="@+id/startTimeLabel" />

                <TextView
                    android:id="@+id/stopTimeTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    app:layout_constraintStart_toStartOf="@+id/startTimeTextView"
                    app:layout_constraintTop_toBottomOf="@+id/startTimeTextView" />

                <TextView
                    android:id="@+id/isRecordingTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    app:layout_constraintStart_toStartOf="@+id/startTimeTextView"
                    app:layout_constraintTop_toBottomOf="@+id/stopTimeTextView" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <com.google.android.gms.maps.MapView
                android:id="@+id/mapView"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.4
"
                android:contentDescription="@string/map_view_content_description" />


        </LinearLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>